<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/image_view_size"
        android:layout_height="@dimen/image_view_size"
        android:layout_above="@+id/enter_user_name_title"
        android:layout_margin="@dimen/margin_10"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_twotone_sort_by_alpha_icon"
        android:contentDescription="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enter_user_name_view"
        android:text="@string/enter_user_name_summary"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:textSize="@dimen/text_view_title"
        android:layout_margin="@dimen/margin_10"
        android:padding="@dimen/padding_10"
        android:id="@+id/enter_user_name_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_10"
        android:orientation="horizontal"
        android:id="@+id/enter_user_name_view">
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:padding="@dimen/padding_10"
            android:hint="@string/enter_user_name"
            android:id="@+id/enter_user_name_edit_text"
            android:inputType="text"/>
        <ImageView
            android:layout_width="@dimen/image_view_button"
            android:layout_height="@dimen/image_view_button"
            android:layout_margin="@dimen/margin_10"
            android:layout_gravity="center"
            android:src="@drawable/ic_done_icon"
            android:id="@+id/done_adding_name_button"
            android:contentDescription="@string/done_adding_user_name"/>
    </LinearLayout>

</RelativeLayout>